--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "s381f-miniproject",
-    "description": "COMPS381F Group Project",
+    "description": "COMPS381F Project",
     "author": "Maverick",
     "version": "0.0.1",
     "dependencies": {
